fix moduler partners